test mode setup and instructions.  minor judge fixes

--- a/STSEval/account/templates/account/stripe_payment_screen.html
+++ b/STSEval/account/templates/account/stripe_payment_screen.html
@@ -29,7 +29,7 @@
         </div>
         <button id="btnPayNow" class="payment-button" onclick="PayClick()">${{total}} Pay Now</button>
     </div>
-    <div style="font-size:.8rem">NOTE: Viewable camera uptime depends on the gyms involved.  You may have large gaps in the viewing experience.</div>
+    <div style="font-size:.75rem">NOTE: Video streaming depends on camera setup of each gym. There may be large gaps in the video stream. You can go to the Scoreboard to see complete routines as soon as they are approved by the judges. </div>
     <!-- We'll put the error messages in this element -->
     <div id="card-errors" role="alert" class="errorlist"></div>
 </div>
