--- a/STSEval/app/templates/app/d1.html
+++ b/STSEval/app/templates/app/d1.html
@@ -1222,7 +1222,7 @@
                             ReleaseEJudges(true);
                         }
                         else*/
-                        
+                        MarkDoneAndGetNextAthlete();
 
 
                     }
