--- a/STSEval/app/templates/app/help/admin_overview.html
+++ b/STSEval/app/templates/app/help/admin_overview.html
@@ -11,11 +11,15 @@
 <p align="left">Go to the scoreboard on the top right of the screen.</p>
 <p align="left">By official's names:</p><ul align="left"><li>Red dot: official not logged in</li><li>Green dot: official logged in</li></ul>
 <p align="left">To adjust Start List:</p>
-<ul align="left"><li>Scratch an event, uncheck (<input type="checkbox" id="chkSL438" onclick="SLCheck(438)" checked="checked">) the gymnast's name.</li>
+<ul align="left"><li>Scratch an event, uncheck (<input type="checkbox" checked="checked">) the gymnast's name.</li>
 <li>Rearrange start list: click and drag the icon (<a href="" title="Drag To Re-Order"><i class="fa fa-exchange fa-rotate-90 start-list-drag-handle"></i></a>) beside the gymnast's name.</li>
-<li>Swap a gymnast's analysis with a gymnast, click the gear icon (<a href="" onclick="ShowRoutineOptions(437)" data-toggle="modal" data-target="#modalSecond"><i class="fa fa-cog"></i></a>) next to the name of the gymnast who was assigned the score.</li>
+<li>Swap a gymnast's analysis with another gymnast, click the gear icon (<a href="#"><i class="fa fa-cog"></i></a>) next to the name of the gymnast who was assigned the score.</li>
 <li>Remove a gymnast from an event, click <b>Reset Current gymnast</b></li><ul align="left"><i>Note: deleted routines cannot be recovered.</i></ul>
 </ul>
 <p align="left">To message anyone in the competition, open the chat window (<i class="fa fa-comments"></i>) on the bottom right of the screen.</p>
+<p align="left">Test Mode:</p>
+<ul align="left"><li>Test mode is on by default. This allows you to test cameras and judges.  This must be disabled before the start of the competition.</li>
+    <li>Disabling test mode resets the meet to the start and clears out routines and scores.</li>
+</ul>
 <button href="#" id="btnTeamCancel" type="button" class="btn btn-red" data-dismiss="modal">OK</button>
 </div>
