--- a/STSEval/management/templates/management/setup_athletes.html
+++ b/STSEval/management/templates/management/setup_athletes.html
@@ -48,7 +48,7 @@
 	        </div>
 	    </div>
     </div>
-    <div id="divRotationNote" style="font-size:.85rem">NOTE: Athlete rotation signifies which event they start on depending on rotation settings (next screen). {{rotation_note}}</div>
+    <div id="divRotationNote" style="font-size:.85rem">NOTE: Athletes on the same team must be on the same rotation unless you have a seperate camera for every event.<br/>Athlete rotation signifies which event they start on depending on rotation settings (next screen). {{rotation_note}}</div>
     <br/>
     <br/>
     <div>
