--- a/STSEval/management/templates/management/session_form.html
+++ b/STSEval/management/templates/management/session_form.html
@@ -13,7 +13,7 @@
                 {{form.level.errors}}
             </div>
             <div class="col-3">
-                SESSION TIME <span style="font-size:.6rem">(EST)</span><br/>
+                SESSION TIME <span style="font-size:.6rem">(PST)</span><br/>
                 {{ form.time }} <br/>
                 {{form.time.errors}}
             </div>
