changes per doug

--- a/STSEval/management/templates/management/setup_testing.html
+++ b/STSEval/management/templates/management/setup_testing.html
@@ -9,42 +9,45 @@
         </div>
         <div class="col-8 pt-2 pl-2" align="left">
             <span>
-                Testing with each new participant is <b>required</b>. After creation, your competition is in Test Mode by default<br/>
-                This allows you to test cameras and judges, it must be disabled before the start of the competition.<br/>
-                Disabling test mode resets the meet to the start and clears out routines and scores.<br/>
-                <span style="color:red;font-weight:bold">Test mode must be disabled before the competition begins.</span>
+                Testing with each participant is <b>required</b>.
+                After creation, your competition is in Test Mode by default.<br/>
+                This allows you to test cameras and judges.<br/>
+                <span style="color:red;font-weight:bold">Test mode must be disabled before the start of the competition.</span>Disabling test mode resets the meet to the start and clears out routines and scores.<br/>
             </span><br/>
         </div>
         <div class="col-3 pr-4" align="right">
              <h2>Camera Testing</h2>
         </div>
         <div class="col-8 pt-2 pl-2" align="left">
-            Each camera needs to:
+            Each camera must:
             <ul>
                 <li>Stream for 5+ minutes</li>
-                <li>Have rapid movement in front of the camera (an actual performance would be best)</li>
+                <li>Have rapid movement in front of the camera (an actual performance is best)</li>
                 <li>Be observed by the administrator (you)</li>
             </ul>
             What to check for:
             <ul>
-                <li>Blurry movement
+                <li>Blurry movement.  This is most likely from a low quality camera or computer
                     <ul>
-                        <li>This is most likely from a low quality camera or computer</li>
-                        <li>Try finding a better camera or adjusting your camera's settings (disable auto white-balance and lighting compensation)</li>
+                        <li>Find a better camera or adjusting your camera's settings (EG disable auto white-balance and lighting compensation)</li>
                     </ul>
                 </li>
-                <li>Glitches, freezing or pixelization
+                <li>Glitches, freezing or pixelization. This is a connection issue
                     <ul>
-                        <li>This is a connection issue</li>
-                        <li>Ask multiple participants if they all see it to make sure it is on the camera's end</li>
-                        <li>Make sure the camera is using an ethernet cable</li>
-                        <li>Have the camera run a speed test at <a href="https://www.speedtest.net/">speedtest.net</a> and make sure they meet the minimum requirements of 25Mbps upload per camera at the location</li>
+                        <li>Ask multiple participants if they all see the same problem to make sure it is on the camera's end</li>
+                        <li>Make sure the camera uses an ethernet cable</li>
+                        <li>Have the camera run a speed test at <a href="https://www.speedtest.net/" target="_blank">speedtest.net</a> and make sure it meets the minimum requirements of 25Mbps upload per camera at the location
+                            <ul>
+                                <li>For example, if you will be running 2 cameras, you need to se 50Mbps upload speed</li>
+                            </ul>
+                        </li>
+                        
                     </ul>
                 </li>
                 <li>Other issues
                     <ul>
-                        <li>Some devices may have a hard time connecting.  Refresh the page and hit the start button again if this occurs.</li>
-                        <li>Try another device if nothing else works.</li>
+                        <li>Some camera may have a hard time connecting.  If so refresh the page and hit the start button again.</li>
+                        <li>Upgrade your camera setup if nothing else works.</li>
                     </ul>
                 </li>
             </ul>  
@@ -53,16 +56,16 @@
              <h2>Judge Testing</h2>
         </div>
         <div class="col-8 pt-2 pl-2" align="left">
-            You should use this opportunity to train the judges on how to use the system.<br/>
+            This will let the judges practice with the live gym system.<br/>
             Each judge needs to:
             <ul>
                 <li>Login to their appropriate role(s)</li>
-                <li>Run through the judging process as if the competition was proceeding as normal at least twice for each role</li>
+                <li>Run through the judging process at least twice for each role</li>
                 <li>Observe a stream for at least 5 minutes and watch for glitches, freezing, pixelization or lagging behind the other viewers
                     <ul>
-                        <li>If these are not experienced by everyone it means they are specific to their system/internet.</li>
+                        <li>If these are not experienced by everyone it means they are specific to the judges system/internet.</li>
                         <li>Make sure they are connected to their internet via an ethernet cable.</li>
-                        <li>If they are unable to reliably view the stream, they will be unable to judge and you may need a replacement.</li>
+                        <li>If they are unable to reliably view the stream, they will be unable to judge and you may need to find a replacement.</li>
                     </ul>
                 </li>
             </ul>
