--- a/STSEval/app/templates/app/session_complete_warn.html
+++ b/STSEval/app/templates/app/session_complete_warn.html
@@ -1,5 +1,9 @@
 {% block content %}
 <div><span style="color:#dc3545;font-weight:bold">WARNING:</span> This will mark the session finished.<br/>Spectators will no longer be able to login and view the event live.</div>
+<div>
+    Message To Spectators (Optional)<br/>
+    <input type="text" name="name" maxlength="125" required="" id="spectator_message" style="width:400px;max-width:none">
+</div>
 <div class="w-100" align="right">
     <button type="button" class="btn btn-success"  data-toggle="modal" data-target="#modalMain" onclick="SessionFinish()">OK</button>
     <button type="button" class="btn btn-red"  data-toggle="modal" data-target="#modalMain">Cancel</button>
