--- a/STSEval/management/templates/management/setup_sponsors.html
+++ b/STSEval/management/templates/management/setup_sponsors.html
@@ -4,7 +4,7 @@
 <div align="center" style="margin:10px;padding:0">
     <h3>{{session_name}}</h3><br/>
     <div>
-        <div id="divSponsors" style="vertical-align: top;padding:3px;display:inline-block;margin-right:30px;">
+        <div id="divSponsors" style="vertical-align: top;padding:3px;display:inline-block;">
 		    <div id="divSponsorHeader" style="padding-bottom:5px;font-size:22px;font-weight:bold;text-align:center">Sponsors (optional)</div>
             Use this page to promote your event sponsors. Advertisements are optional and will be displayed on the spectator screens.
 		    <div id="divSponsorList" class="listbox mb-2" style="width:600px;height:280px;"></div>
@@ -15,6 +15,10 @@
 	        </div>
 	    </div>
     </div>
+    <br/>
+    Welcome Message<br/>
+    <input type="text" name="name" maxlength="125" required="" id="welcome_message" value="{{welcome_message}}" style="width:600px;max-width:none"><br/>
+    <button href="#" id="btnWelcomeUpdate"   type="button" class="btn btn-main management-button mt-2" onclick="UpdateWelcomeMessage()">Update</button>
     <br/>
     <br/>
     <div>
@@ -172,6 +176,21 @@
                     SelectedSponsor = -1;
                     EnableDisableButtons("Sponsor", false);
                     //$("#btnNext").addClass("ui-disabled");
+                }
+            });
+        }
+    }
+
+    function UpdateWelcomeMessage() {
+        if ($("#welcome_message").val() != '' && $("#welcome_message").val() != ' ') {
+            $.ajax({
+                url: "/management/update_splash_message/" + SessionID + "/",
+                data: {
+                    'message': $("#welcome_message").val(),
+                    'type': 'welcome'
+                },
+                success: function () {
+
                 }
             });
         }
