more login fixes

--- a/STSEval/account/templates/account/login_simple.html
+++ b/STSEval/account/templates/account/login_simple.html
@@ -21,7 +21,7 @@
             
           {% endfor %}
       {% if err is not '' %}
-                <div style="color: red">{{ err }}</div>
+                <div style="color: red;max-width:220px">{{ err }}</div>
             {% endif %}
           <button type="submit" class="btn btn-main mt-2">Login</button><br/><br/>
         </form>
