--- a/STSEval/app/templates/app/help/coach.html
+++ b/STSEval/app/templates/app/help/coach.html
@@ -1,4 +1,5 @@
 <div id="divHelpManageTeam" align="center">
+<p align="left">View a video tutorial <a target="_blank" href="https://stslivegym.com/media/stslg-tutorial-coach.mp4">here.</a></p>
 <p align="left">The Coach has access to three features:</p>
 <ul align="left"><li>Start List</li><ul><li>yellow: gymnast stands at the event. Prepare to begin.</li><li>green: gymnast begins exercise.</li><li>red: gymnast has completed exercise.</li></ul>
 <li>Inquiry (<i class='fas fa-comments'></i>) sends a text message to the Meet Administrator:</li><ul><li>scratches</li><li>changes to competition order</li><li>inquiries</li><li>etc.</li></ul>
