--- a/STSEval/management/templates/management/athlete_form.html
+++ b/STSEval/management/templates/management/athlete_form.html
@@ -43,6 +43,11 @@
             </div>
             
         </div>
+        <div class="row">
+            <div class="col-12 pl-4" align="left">
+                {{form.video_opt_out}} Opt Out of Video (Video of this athlete will not be available on the scoreboard)
+            </div>
+        </div>
         
         <input type="hidden" id="id" name="id" value="{{id}}" />
         <input type="submit" href="#" id="btnAthleteFinish" class="btn btn-main" value="Save">
