--- a/STSEval/app/templates/app/backup_video_manage.html
+++ b/STSEval/app/templates/app/backup_video_manage.html
@@ -7,7 +7,7 @@
     <div>
         <div id="divBackupVideos" style="vertical-align: top;padding:3px;display:inline-block;">
 		    <div id="divBackupVideosHeader" style="padding-bottom:5px;font-size:22px;font-weight:bold;text-align:center">Backup Videos</div>
-		    <div id="divBackupVideoList" class="listbox mb-2" style="width:400px;height:140px;"></div>
+		    <div id="divBackupVideoList" class="listbox mb-2" style="width:400px;height:50vh;"></div>
 		    <div id="divBackupVideoButtonsArea">
 		        <button href="#" id="btnBackupVideoAdd" type="button" class="btn btn-main management-button" onclick="AddBackupVideo()">Add</button>
 		        <button href="#" id="btnBackupVideoDelete"   type="button" class="btn btn-red management-button ui-disabled" onclick="BackupVideoDelete()">Delete</button>
